--- a/package.json
+++ b/package.json
@@ -4,10 +4,23 @@
   "private": true,
   "dependencies": {
     "@ant-design/colors": "^3.2.2",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
+    "@babel/polyfill": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
     "antd": "^3.24.3",
     "axios": "^0.19.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.12.2",
+    "babel-polyfill": "^6.26.0",
+    "css-loader": "^3.4.2",
     "customize-cra": "^0.8.0",
+    "file-loader": "^5.0.2",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^6.0.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "lodash": "^4.17.15",
@@ -17,6 +30,7 @@
     "react-burger-menu": "^2.6.11",
     "react-dom": "^16.10.1",
     "react-gauge-chart": "^0.2.4",
+    "react-hot-loader": "^4.12.19",
     "react-image-mapper": "^0.0.15",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
@@ -25,11 +39,15 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "sails.io.js": "^1.2.1",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "build": "webpack --config ./webpack.config.js --mode production",
     "test": "react-app-rewired test"
   },
   "eslintConfig": {
