--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,22 @@
 {
-    "presets": [[
-        "@babel/preset-env", {
-          "useBuiltIns": "entry"
-        }],
-        "@babel/preset-react"],
-    "plugins": [
-        "@babel/plugin-proposal-class-properties",
-        "@babel/plugin-proposal-export-default-from",
-        "react-hot-loader/babel"
-        ]
+  "presets": [[
+    "@babel/preset-env", {
+      "useBuiltIns": "entry"
+    }],
+    "@babel/preset-react"],
+  "plugins": [
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-proposal-export-default-from",
+      "react-hot-loader/babel",
+      [
+        "import",
+        { "libraryName": "antd", "libraryDirectory": "lib", "style": true },
+        "antd"
+      ],
+      [
+        "import",
+        { "libraryName": "antd-mobile", "libraryDirectory": "lib", "style": "css" },
+        "antd-mobile"
+      ]
+    ]
 }
