--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "antd": "^3.24.3",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-import": "^1.12.2",
+    "babel-plugin-import": "^1.13.0",
     "babel-polyfill": "^6.26.0",
+    "core-js": "3",
     "css-loader": "^3.4.2",
     "customize-cra": "^0.8.0",
     "file-loader": "^5.0.2",
